# catscii

./: .env  .envrc  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  flake.nix  fly.toml  rust-toolchain.toml
.cargo/: config.toml
secrets/: shipyard-token
src/: main.rs
