[package]
name = "catscii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artem = { version = "1", default-features = false }
axum = "0.6"
color-eyre = "0.6"
image = "0.24"
locat = { version = "0.2.0", registry = "itsrainingmani" }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-honeycomb = { git = "https://github.com/fasterthanlime/opentelemetry-honeycomb-rs", branch = "simplified", version = "0.1.0" }
pretty-hex = "0.3"
reqwest = { version = "0.11", features = ["json"] }
sentry = "0.29"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[profile.release]
debug = 1 # Include enough debug info for sentry to be useful
opt-level = "z"  # Optimize for size.
lto = true # Enable link-time optimization
