[package]
name = "catscii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artem = { version = "1", default-features = false }
axum = "0.6"
color-eyre = "0.6"
image = "0.24"
locat = { version = "0.4.0", registry = "itsrainingmani" }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-honeycomb = { git = "https://github.com/fasterthanlime/opentelemetry-honeycomb-rs", branch = "simplified", version = "0.1.0" }
pretty-hex = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
sentry = { version = "0.29", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[profile.release]
debug = 1 # Include enough debug info for sentry to be useful
opt-level = "z"  # Optimize for size.
lto = true # Enable link-time optimization
